--- a/sermons/templates/sermons/base.html
+++ b/sermons/templates/sermons/base.html
@@ -141,20 +141,19 @@
             <!-- Grid column -->
             <div class="col-md-5 mt-md-0 mt-3">
               <!-- Links -->
+            
               <h5 class="font-weight-bold text-uppercase mb-4">Categories</h5>
 
               <p>
-                <a class="light-blue-text" href="/wisdom">Pillars Of Wisdom</a>
+                <a class="light-blue-text" href="{% url 'wisdom' %}">Pillars Of Wisdom</a>
               </p>
               <p>
-                <a class="light-blue-text" href="/marriage">Pillars of Marriage</a>
+                <a class="light-blue-text" href="{% url 'marriage' %}">Pillars of Marriage</a>
               </p>
               <p>
-                <a class="light-blue-text" href="/foundations">Pillars Foundation Classes</a>
+                <a class="light-blue-text" href="{% url 'foundation' %}">Pillars Foundation Classes</a>
               </p>
-              <p>
-                <a class="light-blue-text" href="/dreams">Dreams</a>
-              </p>
+
             </div>
             <!-- Grid column -->
 
