--- a/sermons/templates/sermons/contact.html
+++ b/sermons/templates/sermons/contact.html
@@ -1,5 +1,120 @@
 {% extends 'sermons/base.html'%}
 
 {% block content %}
+<div class="container">
+      <!-- Breadcrumb -->
+      <div class="row">
+        <div class="col-12">
+          <nav aria-label="breadcrumb ">
+            <ol class="breadcrumb">
+              <li class="breadcrumb-item"><a class="black-text" href="/index.html">Home</a></li>
+              <li class="breadcrumb-item active">Contact Us</li>
+            </ol>
+          </nav>
+        </div>
+      </div>
 
+
+<section class="my-5">
+        <!-- Section heading -->
+        <h2 class="h1-responsive font-weight-bold text-center my-5">Contact us</h2>
+        <!-- Section description -->
+        <p class="text-center w-responsive mx-auto pb-5">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit, error amet numquam iure provident voluptate esse quasi, veritatis totam voluptas nostrum quisquam eum
+          porro a pariatur veniam.
+        </p>
+
+        <!-- Grid row -->
+        <div class="row">
+          <!-- Grid column -->
+          <div class="col-lg-5 mb-lg-0 mb-4">
+            <!-- Form with header -->
+
+            <div class="">
+              <div class="card-body">
+                <!-- Header -->
+                <div class="form-header black accent-1">
+                  <h3 class="mt-2"><i class="fas fa-envelope"></i> Write to us:</h3>
+                </div>
+                <p class="dark-grey-text">We'll write rarely, but only the best content.</p>
+                <!-- Body -->
+                <form method="post">
+                {% csrf_token %}
+
+                  <div class="md-form">
+                    <i class="fas fa-user prefix grey-text"></i>
+                    <input type="text" id="form-name" class="form-control" name="name"  />
+                    <label for="form-name">Your name</label>
+                  </div>
+                  <div class="md-form">
+                    <i class="fas fa-envelope prefix grey-text"></i>
+                    <input type="text" id="form-email" class="form-control" name="email" />
+                    <label for="form-email">Your email</label>
+                  </div>
+                  <div class="md-form">
+                    <i class="fas fa-tag prefix grey-text"></i>
+                    <input type="text" id="form-Subject" class="form-control" name="subject" />
+                    <label for="form-subject">Subject</label>
+                  </div>
+                  <div class="md-form">
+                    <i class="fas fa-pencil-alt prefix grey-text"></i>
+                    <textarea id="form-text" class="form-control md-textarea" rows="3" name="message"></textarea>
+                    <label for="form-message">Send message</label>
+                  </div>
+                  <div class="text-center">
+                    <button class="btn btn-sm btn-dark">Submit</button>
+                  </div>
+
+                  </form>
+              </div>
+            </div>
+            <!-- Form with header -->
+
+        </div>
+          <!-- Grid column -->
+
+          <!-- Grid column -->
+          <div class="col-lg-7">
+            <!--Google map-->
+            <div id="map-container-section" class="z-depth-1-half map-container-section mb-4" style="height: 400px">
+              <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3988.8211791182675!2d36.81875931475389!3d-1.2809979990656697!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x182f10d4ed488277%3A0xe3859dff5229a00b!2sThe+Clarion+Hotel!5e0!3m2!1sen!2ske!4v1555238463504!5m2!1sen!2ske"
+                width="650"
+                height="400"
+                frameborder="0"
+                style="border:0"
+                allowfullscreen
+              ></iframe>
+            </div>
+            <!-- Buttons-->
+            <div class="row text-center">
+              <div class="col-md-4">
+                <a>
+                  <i class="fas fa-map-marker-alt"></i>
+                </a>
+                <p>Nairobi, 000100</p>
+                <p class="mb-md-0">Kenya</p>
+              </div>
+              <div class="col-md-4">
+                <a>
+                  <i class="fas fa-phone"></i>
+                </a>
+                <p>+ 254 456 789</p>
+                <p class="mb-md-0">Sun & Monday, 4:00 pm -9:00 pm</p>
+              </div>
+              <div class="col-md-4">
+                <a>
+                  <i class="fas fa-envelope"></i>
+                </a>
+                <p>info@gmail.com</p>
+                <p class="mb-0">pillars@gmail.com</p>
+              </div>
+            </div>
+          </div>
+          <!-- Grid column -->
+        </div>
+        <!-- Grid row -->
+      </section>
+
+</div>
 {% endblock content %}
