--- a/sermons/templates/sermons/index.html
+++ b/sermons/templates/sermons/index.html
@@ -66,8 +66,7 @@
                   </p>
                 </li>
                 <li>
-                  <a href="/about.html" class="btn btn-outline-white btn-sm">Learn More</a>
-                  <a href="/signup.html" class="btn btn-outline-info btn-sm">Sign Up</a>
+
                 </li>
               </ul>
             </div>
@@ -97,8 +96,7 @@
                   </p>
                 </li>
                 <li>
-                  <a href="/about.html" class="btn btn-outline-white btn-sm">Learn More</a>
-                  <a href="/signup.html" class="btn btn-outline-info btn-sm">Sign Up</a>
+
                 </li>
               </ul>
             </div>
@@ -129,7 +127,7 @@
    <div class="row wow fadeIn">
      <!--Left Grid column-->
      <div class="col-lg-8 col-md-12 ">
-       <a href="{% url 'category' %}"><h3 class="h3 mb-5"><u>Latest Posts</u></h3></a>
+      <h3 class="h3 mb-5"><u>Latest Posts</u></h3>
 
        <!-- Small news -->
        <div class="single-news mb-1">
