Ready for server

--- a/sermons/templates/sermons/about.html
+++ b/sermons/templates/sermons/about.html
@@ -51,7 +51,7 @@
              <h5 class="dark-grey-text font-weight-bold mt-2">Pillars of Marriage</h5>
              <div class="mt-1">
               <p class="mx-3 grey-text">Five Pillars Guide the Crust and Film of our Teachings of the Godly mandate for Kingdom Marriages: 1) Commitment, 2) Communication, 3) Love, 4) Trust, 5) Understanding.
-                Basically from the five Elements that define Sound Building and construction codes: Sand, Ballast, Steel, Cement, Water
+                Basically from the five Elements that define Sound Building and construction codes: 1) Sand, 2) Ballast, 3) Steel, 4) Cement, 5) Water.
               </p>
              </div>
            </div>
