--- a/sermons/templates/sermons/base.html
+++ b/sermons/templates/sermons/base.html
@@ -2,16 +2,17 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta charset=utf-8 /> <meta name=viewport content="width=device-width,initial-scale=1"/> <title>Pillars Ministry</title>
+    <meta charset=utf-8 />
+    <meta name=viewport content="width=device-width,initial-scale=1"/> <title>Pillars Ministry</title>
     <link rel="stylesheet" href="{% static 'sermons/main.css' %}">
-    <link rel="stylesheet" href="{% static 'sermons/css/main.abe036c864a2f1cf928a.css' %}"
-    <title></title>
+    <link rel="stylesheet" href="{% static 'sermons/css/main.abe036c864a2f1cf928a.css' %}" >
+    <link rel="icon" type="image/ico" href="/static/sermons/assets/cec7dac5ebecb233ca1301b80bf288cd.png">
   </head>
   <!--Navbar-->
     <nav class="navbar navbar-expand-lg ">
       <div class="container" id="navText">
         <!-- Navbar brand -->
-        <a class="navbar-brand font-weight-bolder black-text" href="/index.html">
+        <a class="navbar-brand font-weight-bolder black-text" href="{% url 'home-page' %}">
          <img src="/static/sermons/assets/cec7dac5ebecb233ca1301b80bf288cd.png" height="50" class="d-inline-block align-self-center"
            alt="mdb logo" > Pillars Ministry
        </a>
@@ -45,6 +46,7 @@
             <li class="nav-item">
                 <a class="nav-link" href="{% url 'home-page'%}">
                   <!--<i class="fas fa-phone mx-1"></i> -->
+                  <i class="fas fa-home mr-3"></i>
                   Home</a>
               </li>
             <li class="nav-item active">
@@ -165,10 +167,10 @@
               <!-- Links -->
               <h5 class="font-weight-bold text-uppercase mb-4">Contact Us:</h5>
 
-              <p><i class="fas fa-home mr-3"></i> Nairobi, 10012, KE</p>
-              <p><i class="fas fa-envelope mr-3"></i> info@pillars.org</p>
-              <p><i class="fas fa-phone mr-3"></i> + 254 720 567 788</p>
-              <p><i class="fas fa-print mr-3"></i> + 254 234 567 819</p>
+              <p><i class="fas fa-home mr-3"></i>View Park Towers, Nairobi, Kenya</p>
+              <p><i class="fas fa-envelope mr-3"></i> pillarsofmarriage@gmail.com</p>
+              <p><i class="fas fa-phone mr-3"></i> + 254 720 136 632</p>
+
             </div>
             <!-- Grid column -->
           </div>
