--- a/sermons/templates/sermons/index.html
+++ b/sermons/templates/sermons/index.html
@@ -136,8 +136,9 @@
            <!-- Grid column -->
            <div class="col-md-3">
              <!--Image-->
+             {% for teach in wisdom %}
              <div class=" overlay rounded z-depth-3 ">
-               <img class="img-fluid" src="/static/sermons/assets/5485c387f702725f6a707009e0a5e218.svg" alt="Sample image" />
+               <img class="img-fluid" src="https://mdbootstrap.com/img/Photos/Others/photo8.jpg" alt="Sample image" />
                <a>
                  <div class="mask rgba-white-slight"></div>
                </a>
@@ -152,7 +153,7 @@
                <div class="col-12  pl-0 ">
               <a href="{% url 'wisdom'%}">   <h5 class="font-weight-bold mb-0">Pillars of Wisdom</h5> </a>
                  <a href="#!" class="blue-text font-weight-normal  font-italic">
-                   {% for teach in wisdom %}
+
                         {{ teach.title }}
                    </a>
                  <p class="mb-1">
@@ -187,7 +188,7 @@
            <div class="col-md-3">
              <!--Image-->
              <div class=" overlay rounded z-depth-3 ">
-               <img class="img-fluid" src="/static/sermons/assets/5485c387f702725f6a707009e0a5e218.svg" alt="Sample image" />
+               <img class="img-fluid" src="https://mdbootstrap.com/img/Photos/Others/photo8.jpg" alt="Sample image" />
                <a>
                  <div class="mask rgba-white-slight"></div>
                </a>
@@ -239,7 +240,7 @@
            <div class="col-md-3">
              <!--Image-->
              <div class=" overlay rounded z-depth-3 ">
-               <img class="img-fluid" src="/static/sermons/assets/5485c387f702725f6a707009e0a5e218.svg" alt="Sample image" />
+               <img class="img-fluid" src="https://mdbootstrap.com/img/Photos/Others/photo8.jpg" alt="Sample image" />
                <a>
                  <div class="mask rgba-white-slight"></div>
                </a>
