--- a/sermons/templates/sermons/wisdom.html
+++ b/sermons/templates/sermons/wisdom.html
@@ -1,31 +1,244 @@
-{% extends 'sermons/base.html' %}
-{% block content %}
-<div class="col-md-9">
-  <!-- Excerpt -->
-  <div class="d-flex justify-content-between">
-    <div class="col-12  pl-0 ">
-      <h5 class="font-weight-bold mb-0">Pillars of Wisdom</h5>
-      {% for teaching in wisdom %}
-      <a href="#!" class="blue-text font-weight-normal font-italic">
+{% extends 'sermons/base.html'%}
 
-           {{ teaching.title }}
-      </a>
-      <p class="mb-1">
-        {% if teaching.audi %}
-        <a class="black-text" href="{{ teaching.audi.url }}"><i class="fas fa-play mx-2"></i>Play Audio</a>
-        {% else %}
-        <a class="black-text" href="#!"><i class="fas fa-play mx-2"></i>No Audio</a>
-        {% endif %}
-        {% if teaching.notes %}
-        <a class="black-text" href="{{ teaching.notes.url }}"><i class="fas fa-file-download mx-2"></i>Download Notes</a>
-        {% else %}
-        <a class="black-text" href="#!"><i class="fas fa-file-download mx-2"></i>Notes Unavailable</a>
-        {% endif %}
-      </p>
-      <h6 class="dark-grey-text">{{ teaching.date_created }}<span class="font-small light-blue-text"> By {{ teaching.teacher }}</span></h6>
-      {% endfor %}
+{% block content %}
+
+<div class="container">
+  <!-- Breadcrumb -->
+  <div class="row">
+    <div class="col-12">
+      <nav aria-label="breadcrumb ">
+        <ol class="breadcrumb">
+          <li class="breadcrumb-item"><a class="black-text" href="/index.html">Home</a></li>
+          <li class="breadcrumb-item active">Wisdom Sermons</li>
+        </ol>
+      </nav>
     </div>
   </div>
+
+  <!-- Blog Template -->
+  <section class="mt-1">
+    <div class="row">
+      <!--Left Column-->
+      <div class="col-md-8 col-12 ">
+
+        <h3 class="h3 mb-3">Pillars of Wisdom</h3>
+        <!-- Small news -->
+        {% for teaching in wisdom %}
+        <div class="single-news mb-1">
+          <!-- Grid row -->
+          <div class="row">
+            <!-- Grid column -->
+            <div class="col-md-3">
+              <!--Image-->
+              <div class=" overlay rounded z-depth-3 ">
+                <img class="img-fluid" src="https://mdbootstrap.com/img/Photos/Others/photo8.jpg" alt="Sample image" />
+                <a>
+                  <div class="mask rgba-white-slight"></div>
+                </a>
+              </div>
+            </div>
+            <!-- Grid column -->
+
+            <!-- Grid column -->
+            <div class="col-md-9">
+              <!-- Excerpt -->
+              <div class="d-flex justify-content-between">
+                <div class="col-12  pl-0 ">
+                  <h5 class="font-weight-bold mb-0"></h5>
+                  <a href="#!" class="blue-text font-weight-normal  font-italic"
+                    >{{ teaching.title }}</a
+                  >
+                  <p class="mb-1">
+                    {% if teaching.audi %}
+                    <a class="black-text" href="{{ teaching.audi.url }}"><i class="fas fa-play mx-2"></i>Play Audio</a>
+                    {% else %}
+                    <a class="black-text" href="#!"><i class="fas fa-play mx-2"></i>No Audio</a>
+                    {% endif %}
+                    {% if teaching.notes %}
+                    <a class="black-text" href="{{ teaching.notes.url }}"><i class="fas fa-file-download mx-2"></i>Download Notes</a>
+                    {% else %}
+                    <a class="black-text" href="#!"><i class="fas fa-file-download mx-2"></i>Notes Unavailable</a>
+                    {% endif %}
+                  </p>
+                  <h6 class="dark-grey-text">{{ teaching.date_created }}<span class="font-small light-blue-text"> By {{ teaching.teacher }}</span></h6>
+                </div>
+              </div>
+            </div>
+            <!-- Grid column -->
+          </div>
+          <!-- Grid row -->
+        </div>
+        <!-- Small news -->
+
+        <div style="height:10px"></div>
+        {% endfor %}
+         <!-- Small news -->
+
+          <!-- Small news -->
+
+          <div style="height:10px"></div>
+
+          <!-- Small news -->
+          <div class="single-news mb-1">
+            <!-- Grid row -->
+            <div class="row">
+              <!-- Grid column -->
+              <div class="col-md-3">
+                <!--Image-->
+
+              </div>
+              <!-- Grid column -->
+
+              <!-- Grid column -->
+              <div class="col-md-9">
+                <!-- Excerpt -->
+                <div class="d-flex justify-content-between">
+
+                </div>
+              </div>
+              <!-- Grid column -->
+            </div>
+            <!-- Grid row -->
+          </div>
+          <!-- Small news -->
+        </div>
+      <!--Right Column-->
+      <div class="col-md-4 col-12 ">
+        <div class="row mt-1">
+          <!--Grid column-->
+          <div class="col-md-12">
+            <!--Carousel Wrapper-->
+            <div id="carousel-example-4" class="carousel slide carousel-fade z-depth-1-half" data-ride="carousel">
+              <!--Indicators-->
+              <ol class="carousel-indicators">
+                <li data-target="#carousel-example-4" data-slide-to="0" class="active"></li>
+                <li data-target="#carousel-example-4" data-slide-to="1"></li>
+                <li data-target="#carousel-example-4" data-slide-to="2"></li>
+              </ol>
+              <!--Indicators-->
+
+              <!--Slides-->
+              <div class="carousel-inner" role="listbox">
+                <!--First slide-->
+                <div class="carousel-item active">
+                  <!--Mask color-->
+                  <div class="view">
+                    <img src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/8-col/img%20(126).jpg" class="img-fluid" alt="" />
+                    <a href="#!">
+                      <div class="mask flex-center rgba-stylish-strong"></div>
+                    </a>
+                  </div>
+                  <!--Caption-->
+                  <div class="carousel-caption">
+                    <div class="animated fadeInDown">
+                      <h4 class="h4-responsive">
+                        <a href="#!" class="white-text font-weight-bold">Study the Word</a>
+                      </h4>
+                      <p>
+                        <a href="#!" class="white-text">2 Timothy 2:15</a>
+                      </p>
+                    </div>
+                  </div>
+                  <!--Caption-->
+                </div>
+                <!--First slide-->
+
+                <!--Second slide-->
+                <div class="carousel-item">
+                  <!--Mask color-->
+                  <div class="view">
+                    <img src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/8-col/img%20(128).jpg" class="img-fluid" alt="" />
+                    <a href="#!">
+                      <div class="mask flex-center rgba-black-light"></div>
+                    </a>
+                  </div>
+                  <!--Caption-->
+                  <div class="carousel-caption">
+                    <div class="animated fadeInDown">
+                      <h4 class="h4-responsive">
+                        <a href="#!" class="white-text font-weight-bold">Pray Always</a>
+                      </h4>
+                      <p>
+                        <a href="#!" class="white-text">Luke 18:1 - 8</a>
+                      </p>
+                    </div>
+                  </div>
+                  <!--Caption-->
+                </div>
+                <!--Second slide-->
+
+                <!--Third slide-->
+                <div class="carousel-item">
+                  <!--Mask color-->
+                  <div class="view">
+                    <img src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/8-col/img%20(133).jpg" class="img-fluid" alt="" />
+                    <a href="#!">
+                      <div class="mask flex-center rgba-black-light"></div>
+                    </a>
+                  </div>
+                  <!--Caption-->
+                  <div class="carousel-caption">
+                    <div class="animated fadeInDown">
+                      <h4 class="h4-responsive">
+                        <a href="#!" class="white-text font-weight-bold">Fast</a>
+                      </h4>
+                      <p>
+                        <a href="#!" class="white-text">Isaiah 58:6</a>
+                      </p>
+                    </div>
+                  </div>
+                  <!--Caption-->
+                </div>
+                <!--Third slide-->
+              </div>
+              <!--Slides-->
+
+              <!--Controls-->
+              <a class="carousel-control-prev" href="#carousel-example-4" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+              </a>
+              <a class="carousel-control-next" href="#carousel-example-4" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+              </a>
+              <!--.Controls-->
+            </div>
+            <!--Carousel Wrapper-->
+          </div>
+          <!--Grid column-->
+
+          <div class="col-12 ">
+            <!--Card-->
+            <div class=" mb-4 wow fadeIn">
+              <div class="card-header">Announcements</div>
+
+              <!--Card content-->
+              <div class="card-body">
+                <ul class="list-unstyled">
+
+                  {% for announcement in announce %}
+                  <li class="media my-4">
+
+                    <div class="media-body">
+                      <a href="">
+                        <h5 class="mt-0 mb-1 font-weight-bold">{{ announcement.title }}</h5>
+                      </a>
+                      {{ announcement.body }}
+                      <h6 class="dark-grey-text">{{ announcement.date_posted }}<span class="font-small light-blue-text"> By {{ announcement.by_who }}</span></h6>
+                    </div>
+                  </li>
+                  {% endfor %}
+
+                </ul>
+              </div>
+            </div>
+            <!--/.Card-->
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 </div>
 
 {% endblock content %}
